Attempt to fix selection on mobile

--- a/www/html/css/game.css
+++ b/www/html/css/game.css
@@ -27,12 +27,14 @@ html, body {
     overflow: hidden;
 }
 * {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -webkit-tap-highlight-color: rgba(255,255,255,0);
     -webkit-user-drag: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
     touch-action: none;
-    -webkit-touch-callout: none;
 }
 
 button {
